# projetIA41

./: README.md  projet.pl
gui/: CMakeLists.txt  GameWindow.cpp  GameWindow.h  PrologBridge.cpp  PrologBridge.h  main.cpp
moteur/: difference.docx  projet.pl  test.pl  ~$fference.docx
